tests/neg-custom-args/captures/extending-cap-classes.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/extending-cap-classes.scala:7:15 -------------------------
7 |  val x2: C1 = new C2 // error
  |               ^^^^^^
  |               Found:    C2
  |               Required: C1
  |
  | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/extending-cap-classes.scala:8:15 -------------------------
8 |  val x3: C1 = new C3 // error
  |               ^^^^^^
  |               Found:    C3
  |               Required: C1
  |
  | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/extending-cap-classes.scala:13:15 ------------------------
13 |  val z2: C1 = y2 // error
   |               ^^
   |               Found:    (y2 : C2)
   |               Required: C1
   |
   | longer explanation available when compiling with `-explain`
